new functions industries and currencies

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -775,7 +775,11 @@
 	"BULGARIA": "Bulgarien",
 	"BULGARIAN": "Bulgarisch",
 	"CANADA": "Kanada",
+	"ccplusplus": "C/C++",
+	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Mitteleuropa",
+	"cobol": "COBOL",
+	"COBOL": "COBOL",
 	"CONSTRUCTION": "Konstruktion",
 	"create-candidate--profile-image": "Es gab ein Problem mit dem Profilbild",
 	"create-candidate-cv-format": "Der Lebenslauf muss im Word- oder PDF-Format vorliegen und kleiner als 1 MB sein",
@@ -797,6 +801,7 @@
 	"DENMARK": "Dänemark",
 	"DUTCH": "Niederländisch",
 	"EASTERN_EUROPE": "Osteuropa",
+	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Ausbildung",
 	"ENERGY": "Energie",
 	"ENGLISH": "Englisch",
@@ -894,6 +899,7 @@
 	"LUXEMBOURG": "Luxemburg",
 	"MALTA": "Malta",
 	"MALTESE": "Maltesisch",
+	"MEDIA": "Media",
 	"MILITARY": "Militär",
 	"mp-failure-failed-to-update-open-position": "Offene Position konnte nicht aktualisiert werden",
 	"mp-left-failure-failed-to-persits-new-open-position": "Neue offene Position konnte nicht beibehalten werden",
@@ -1001,6 +1007,7 @@
 	"register-recruiter-success": "Ihre Anfrage wurde übermittelt. Nach der Annahme wird eine E-Mail mit Ihren Anmeldedaten gesendet.",
 	"register-recruiter-success-title": "Erfolg",
 	"REPUBLIC_OF_IRELAND": "Irland",
+	"RETAIL": "Einzelhandel",
 	"ROMANIA": "Rumänien",
 	"ROMANIAN": "Rumänisch",
 	"RUBY": "Ruby",
@@ -1009,6 +1016,8 @@
 	"RUSSIAN": "Russisch",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"sap": "SAP",
+	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "Kandidat nicht mehr verfügbar",
 	"saved-candidate-search-queries": "Suchanfragen",
 	"saved-qry-btn-create": "Erschaffe",
