--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -775,7 +775,11 @@
 	"BULGARIA": "Bulgaria",
 	"BULGARIAN": "Bulgarian",
 	"CANADA": "Canada",
+	"ccplusplus": "C/C++",
+	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Central Europe",
+	"cobol": "COBOL",
+	"COBOL": "COBOL",
 	"CONSTRUCTION": "Construction",
 	"create-candidate--profile-image": "There was an issue with the profile image",
 	"create-candidate-cv-format": "CV must be Word or PDF and less than 1MB",
@@ -797,6 +801,7 @@
 	"DENMARK": "Denmark",
 	"DUTCH": "Dutch",
 	"EASTERN_EUROPE": "Eastern Europe",
+	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Education",
 	"ENERGY": "Energy",
 	"ENGLISH": "English",
@@ -894,6 +899,7 @@
 	"LUXEMBOURG": "Luxembourg",
 	"MALTA": "Malta",
 	"MALTESE": "Maltese",
+	"MEDIA": "Media",
 	"MILITARY": "Military",
 	"mp-failure-failed-to-update-open-position": "Failed to update Open Position",
 	"mp-left-failure-failed-to-persits-new-open-position": "Failed to persist new Open Position",
@@ -1001,6 +1007,7 @@
 	"register-recruiter-success": "Your request has been submitted. Once accepted an email will be sent with your login details.",
 	"register-recruiter-success-title": "Success",
 	"REPUBLIC_OF_IRELAND": "Ireland",
+	"RETAIL": "Retail",
 	"ROMANIA": "Romania",
 	"ROMANIAN": "Romanian",
 	"RUBY": "Ruby",
@@ -1009,6 +1016,8 @@
 	"RUSSIAN": "Russian",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"sap": "SAP",
+	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
 	"saved-candidate-search-queries": "Searches",
 	"saved-qry-btn-create": "Create",
