--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -775,7 +775,11 @@
 	"BULGARIA": "Bulgaria",
 	"BULGARIAN": "Búlgaro",
 	"CANADA": "Canadá",
+	"ccplusplus": "C/C++",
+	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europa Central",
+	"cobol": "COBOL",
+	"COBOL": "COBOL",
 	"CONSTRUCTION": "Construcción",
 	"create-candidate--profile-image": "Hubo un problema con la imagen de perfil.",
 	"create-candidate-cv-format": "El CV debe ser en formato Word o PDF y tener un tamaño inferior a 1 MB.",
@@ -797,6 +801,7 @@
 	"DENMARK": "Dinamarca",
 	"DUTCH": "Holandés",
 	"EASTERN_EUROPE": "Europa Oriental",
+	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Educación",
 	"ENERGY": "Energía",
 	"ENGLISH": "Inglés",
@@ -894,6 +899,7 @@
 	"LUXEMBOURG": "Luxemburgo",
 	"MALTA": "Malta",
 	"MALTESE": "Maltés",
+	"MEDIA": "Media",
 	"MILITARY": "Militar",
 	"mp-failure-failed-to-update-open-position": "No se pudo actualizar la posición abierta",
 	"mp-left-failure-failed-to-persits-new-open-position": "No se pudo conservar la nueva posición abierta",
@@ -1001,6 +1007,7 @@
 	"register-recruiter-success": "Su solicitud ha sido enviada. Una vez aceptada, se le enviará un correo electrónico con sus datos de acceso.",
 	"register-recruiter-success-title": "Éxito",
 	"REPUBLIC_OF_IRELAND": "Irlanda",
+	"RETAIL": "Venta",
 	"ROMANIA": "Rumania",
 	"ROMANIAN": "Rumano",
 	"RUBY": "Ruby",
@@ -1009,6 +1016,8 @@
 	"RUSSIAN": "Ruso",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"sap": "SAP",
+	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
 	"saved-candidate-search-queries": "Búsquedas",
 	"saved-qry-btn-create": "Crear",
