--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -775,7 +775,11 @@
 	"BULGARIA": "Bulgarie",
 	"BULGARIAN": "Bulgare",
 	"CANADA": "Canada",
+	"ccplusplus": "C/C++",
+	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europe centrale",
+	"cobol": "COBOL",
+	"COBOL": "COBOL",
 	"CONSTRUCTION": "Construction",
 	"create-candidate--profile-image": "Il y a eu un problème avec l'image de profil",
 	"create-candidate-cv-format": "Le CV doit être Word ou PDF et moins de 1 Mo",
@@ -797,6 +801,7 @@
 	"DENMARK": "Danemark",
 	"DUTCH": "Néerlandais",
 	"EASTERN_EUROPE": "L'Europe de l'Est",
+	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Éducation",
 	"ENERGY": "Énergie",
 	"ENGLISH": "Anglais",
@@ -894,6 +899,7 @@
 	"LUXEMBOURG": "Luxembourg",
 	"MALTA": "Malte",
 	"MALTESE": "Maltais",
+	"MEDIA": "Media",
 	"MILITARY": "Militaire",
 	"mp-failure-failed-to-update-open-position": "Échec de la mise à jour de la position ouverte",
 	"mp-left-failure-failed-to-persits-new-open-position": "Échec de la persistance de la nouvelle position ouverte",
@@ -1001,6 +1007,7 @@
 	"register-recruiter-success": "Votre requête à bien été envoyée. Une fois accepté, un e-mail vous sera envoyé avec vos informations de connexion.",
 	"register-recruiter-success-title": "Succès",
 	"REPUBLIC_OF_IRELAND": "Irlande",
+	"RETAIL": "Vente",
 	"ROMANIA": "Roumanie",
 	"ROMANIAN": "Roumain",
 	"RUBY": "Ruby",
@@ -1009,6 +1016,8 @@
 	"RUSSIAN": "Russe",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"sap": "SAP",
+	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
 	"saved-candidate-search-queries": "Recherches",
 	"saved-qry-btn-create": "Créer",
