--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -775,7 +775,11 @@
 	"BULGARIA": "Bulgaria",
 	"BULGARIAN": "Bulgaro",
 	"CANADA": "Canada",
+	"ccplusplus": "C/C++",
+	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Europa centrale",
+	"cobol": "COBOL",
+	"COBOL": "COBOL",
 	"CONSTRUCTION": "Costruzione",
 	"create-candidate--profile-image": "Si è verificato un problema con l'immagine del profilo",
 	"create-candidate-cv-format": "Il CV deve essere in formato Word o PDF e di dimensioni inferiori a 1 MB",
@@ -797,6 +801,7 @@
 	"DENMARK": "Danimarca",
 	"DUTCH": "Olandese",
 	"EASTERN_EUROPE": "Europa orientale",
+	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Istruzione",
 	"ENERGY": "Energia",
 	"ENGLISH": "Inglese",
@@ -894,6 +899,7 @@
 	"LUXEMBOURG": "Lussemburgo",
 	"MALTA": "Malta",
 	"MALTESE": "Maltese",
+	"MEDIA": "Media",
 	"MILITARY": "Militare",
 	"mp-failure-failed-to-update-open-position": "Impossibile aggiornare la posizione aperta",
 	"mp-left-failure-failed-to-persits-new-open-position": "Impossibile mantenere la nuova posizione aperta",
@@ -1001,6 +1007,7 @@
 	"register-recruiter-success": "La tua richiesta è stata inoltrata. Una volta accettata, ti verrà inviata un'e-mail con i tuoi dati di accesso.",
 	"register-recruiter-success-title": "Successo",
 	"REPUBLIC_OF_IRELAND": "Irlanda",
+	"RETAIL": "Commercio ",
 	"ROMANIA": "Romania",
 	"ROMANIAN": "Rumeno",
 	"RUBY": "Ruby",
@@ -1009,6 +1016,8 @@
 	"RUSSIAN": "Russo",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"sap": "SAP",
+	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
 	"saved-candidate-search-queries": "Ricercas",
 	"saved-qry-btn-create": "Crea",
