--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -775,7 +775,11 @@
 	"BULGARIA": "Bulgarije",
 	"BULGARIAN": "Bulgaars",
 	"CANADA": "Canada",
+	"ccplusplus": "C/C++",
+	"CCPLUSPLUS": "C/C++",
 	"CENTRAL_EUROPE": "Centraal Europa",
+	"cobol": "COBOL",
+	"COBOL": "COBOL",
 	"CONSTRUCTION": "Bouw",
 	"create-candidate--profile-image": "Er was een probleem met de profielafbeelding",
 	"create-candidate-cv-format": "CV moet Word of PDF zijn en minder dan 1 MB groot",
@@ -797,6 +801,7 @@
 	"DENMARK": "Denemarken",
 	"DUTCH": "Nederlands",
 	"EASTERN_EUROPE": "Oost-Europa",
+	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Onderwijs",
 	"ENERGY": "Energie",
 	"ENGLISH": "Engels",
@@ -894,6 +899,7 @@
 	"LUXEMBOURG": "Luxemburg",
 	"MALTA": "Malta",
 	"MALTESE": "Maltees",
+	"MEDIA": "Media",
 	"MILITARY": "Militair",
 	"mp-failure-failed-to-update-open-position": "Kan de open positie niet bijwerken",
 	"mp-left-failure-failed-to-persits-new-open-position": "Kan nieuwe open positie niet volhouden",
@@ -1001,6 +1007,7 @@
 	"register-recruiter-success": "Uw aanvraag is ingediend. Na acceptatie wordt er een e-mail verzonden met uw inloggegevens.",
 	"register-recruiter-success-title": "Succes",
 	"REPUBLIC_OF_IRELAND": "Ierland",
+	"RETAIL": "Detailhandel",
 	"ROMANIA": "Roemenië",
 	"ROMANIAN": "Roemeense",
 	"RUBY": "Ruby",
@@ -1009,6 +1016,8 @@
 	"RUSSIAN": "Russisch",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"sap": "SAP",
+	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
 	"saved-candidate-search-queries": "Zoektochten",
 	"saved-qry-btn-create": "Maken",
