working extract from spec with location but timing issue on displaying cuty in location filter still to fix

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -313,10 +313,10 @@
 	"arenella-new-candidate-firstname": "Vorname",
 	"arenella-new-candidate-from": "AUS",
 	"arenella-new-candidate-fully-remote": "Vollständig remote",
-	"arenella-new-candidate-function-group": "Funktionsgruppe",
+	"arenella-new-candidate-function-group": "Kernfunktionen",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Stunde",
-	"arenella-new-candidate-industries-group": "Branchen",
+	"arenella-new-candidate-industries-group": "Branchenerfahrung",
 	"arenella-new-candidate-introduction": "Einführung",
 	"arenella-new-candidate-location": "Standort",
 	"arenella-new-candidate-no": "Nein",
