--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -313,10 +313,10 @@
 	"arenella-new-candidate-firstname": "First name",
 	"arenella-new-candidate-from": "From",
 	"arenella-new-candidate-fully-remote": "Fully Remote",
-	"arenella-new-candidate-function-group": "Function Group",
+	"arenella-new-candidate-function-group": "Core Functions",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Hour",
-	"arenella-new-candidate-industries-group": "Industries",
+	"arenella-new-candidate-industries-group": "Industry experience",
 	"arenella-new-candidate-introduction": "Introduction",
 	"arenella-new-candidate-location": "Location",
 	"arenella-new-candidate-no": "No",
