--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -313,10 +313,10 @@
 	"arenella-new-candidate-firstname": "Nombre de pila",
 	"arenella-new-candidate-from": "De",
 	"arenella-new-candidate-fully-remote": "Completamente remoto",
-	"arenella-new-candidate-function-group": "Grupo de funciones",
+	"arenella-new-candidate-function-group": "Funciones principales",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Hora",
-	"arenella-new-candidate-industries-group": "Industrias",
+	"arenella-new-candidate-industries-group": "Experiencia en la industria",
 	"arenella-new-candidate-introduction": "Introducción",
 	"arenella-new-candidate-location": "Ubicación",
 	"arenella-new-candidate-no": "No",
