--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -313,10 +313,10 @@
 	"arenella-new-candidate-firstname": "Prénom",
 	"arenella-new-candidate-from": "De",
 	"arenella-new-candidate-fully-remote": "Entièrement distant",
-	"arenella-new-candidate-function-group": "Groupe de fonctions",
+	"arenella-new-candidate-function-group": "Fonctions principales",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Heure",
-	"arenella-new-candidate-industries-group": "Secteurs",
+	"arenella-new-candidate-industries-group": "Expérience de l'industrie",
 	"arenella-new-candidate-introduction": "Introduction",
 	"arenella-new-candidate-location": "Emplacement",
 	"arenella-new-candidate-no": "Non",
