--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -313,10 +313,10 @@
 	"arenella-new-candidate-firstname": "Nome di battesimo",
 	"arenella-new-candidate-from": "Da",
 	"arenella-new-candidate-fully-remote": "Completamente remoto",
-	"arenella-new-candidate-function-group": "Gruppo di funzioni",
+	"arenella-new-candidate-function-group": "Funzioni principali",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Ora",
-	"arenella-new-candidate-industries-group": "Industrie",
+	"arenella-new-candidate-industries-group": "Esperienza nel settore",
 	"arenella-new-candidate-introduction": "Introduzione",
 	"arenella-new-candidate-location": "Posizione",
 	"arenella-new-candidate-no": "No",
