--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -313,10 +313,10 @@
 	"arenella-new-candidate-firstname": "Voornaam",
 	"arenella-new-candidate-from": "Van",
 	"arenella-new-candidate-fully-remote": "Volledig op afstand",
-	"arenella-new-candidate-function-group": "Functiegroep",
+	"arenella-new-candidate-function-group": "Kernfuncties",
 	"arenella-new-candidate-gbp": "GBP",
 	"arenella-new-candidate-hour": "Uur",
-	"arenella-new-candidate-industries-group": "Industrieën",
+	"arenella-new-candidate-industries-group": "Ervaring in de sector",
 	"arenella-new-candidate-introduction": "Invoering",
 	"arenella-new-candidate-location": "Plaats",
 	"arenella-new-candidate-no": "Nee",
