extract filters. Set location in GUI fix, extracted filters popup and city extractor fix for den haag

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -698,6 +698,8 @@
 	"arenella-suggestions-dutch": "Niederländisch",
 	"arenella-suggestions-english": "Englisch",
 	"arenella-suggestions-experience": "Jahre Erfahrung",
+	"arenella-suggestions-extracted-filters": "Extrahierte Filter",
+	"arenella-suggestions-extracted-filters-intro": "Die folgenden Filter wurden extrahiert und auf die Suchergebnisse angewendet",
 	"arenella-suggestions-french": "Französisch",
 	"arenella-suggestions-geoZones": "Zonen",
 	"arenella-suggestions-german": "Deutsch",
