--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -698,6 +698,8 @@
 	"arenella-suggestions-dutch": "Dutch",
 	"arenella-suggestions-english": "English",
 	"arenella-suggestions-experience": "Years Exp",
+	"arenella-suggestions-extracted-filters": "Extracted Filters",
+	"arenella-suggestions-extracted-filters-intro": "The following filters have been extracted and applied to the search results",
 	"arenella-suggestions-french": "French",
 	"arenella-suggestions-geoZones": "Zones",
 	"arenella-suggestions-german": "German",
