--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -698,6 +698,8 @@
 	"arenella-suggestions-dutch": "Holandés",
 	"arenella-suggestions-english": "Inglés",
 	"arenella-suggestions-experience": "Años Exp",
+	"arenella-suggestions-extracted-filters": "Filtros extraídos",
+	"arenella-suggestions-extracted-filters-intro": "Se han extraído y aplicado los siguientes filtros a los resultados de la búsqueda.",
 	"arenella-suggestions-french": "Francés",
 	"arenella-suggestions-geoZones": "Zonas",
 	"arenella-suggestions-german": "Alemán",
