--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -698,6 +698,8 @@
 	"arenella-suggestions-dutch": "Néerlandais",
 	"arenella-suggestions-english": "Anglais",
 	"arenella-suggestions-experience": "Années d'expérience",
+	"arenella-suggestions-extracted-filters": "Filtres extraits",
+	"arenella-suggestions-extracted-filters-intro": "Les filtres suivants ont été extraits et appliqués aux résultats de la recherche",
 	"arenella-suggestions-french": "Français",
 	"arenella-suggestions-geoZones": "Zones",
 	"arenella-suggestions-german": "Allemand",
