--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -698,6 +698,8 @@
 	"arenella-suggestions-dutch": "Olandese",
 	"arenella-suggestions-english": "Inglese",
 	"arenella-suggestions-experience": "Anni di esperienza",
+	"arenella-suggestions-extracted-filters": "Filtri estratti",
+	"arenella-suggestions-extracted-filters-intro": "I seguenti filtri sono stati estratti e applicati ai risultati della ricerca",
 	"arenella-suggestions-french": "Francese",
 	"arenella-suggestions-geoZones": "Zone",
 	"arenella-suggestions-german": "Tedesco",
