--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -698,6 +698,8 @@
 	"arenella-suggestions-dutch": "Nederlands",
 	"arenella-suggestions-english": "Engels",
 	"arenella-suggestions-experience": "Jaren ervaring",
+	"arenella-suggestions-extracted-filters": "Geëxtraheerde filters",
+	"arenella-suggestions-extracted-filters-intro": "De volgende filters zijn geëxtraheerd en toegepast op de zoekresultaten",
 	"arenella-suggestions-french": "Frans",
 	"arenella-suggestions-geoZones": "Zones",
 	"arenella-suggestions-german": "Duits",
