--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -221,7 +221,7 @@
 	"arenella-infobox-contact": "Kontakt",
 	"arenella-listing-btn-back": "Zurück",
 	"arenella-listing-btn-create": "Alarm erstellen",
-	"arenella-listing-btn-publicity": "Aktie",
+	"arenella-listing-btn-publicity": "Aktion",
 	"arenella-listing-btn-send": "Schicken",
 	"arenella-listing-btn-your-posts": "Deine Beiträge",
 	"arenella-listing-city": "Stadt",
@@ -264,7 +264,7 @@
 	"arenella-listing-most-searched-functions": "Beliebteste Funktionen der letzten 30 Tage",
 	"arenella-listing-most-searched-summary": "Die IT-Personalvermittler, die Arenella-ICT nutzen, arbeiten für ihre eigenen Personalagenturen. Jeder Personalvermittler/jede Personalagentur hat seine eigenen Stellen zu besetzen. Einige der Personalvermittler bewerben ihre offenen Stellen auf der Jobbörse. Andere suchen lieber in den Profilen und kontaktieren die Kandidaten direkt. Die obigen Diagramme zeigen Informationen zu den beliebtesten Kandidatentypen der letzten 30 Tage. Wenn Sie ein kostenloses Profil erstellen, können die Personalvermittler Sie bezüglich relevanter Stellen kontaktieren. Die Personalvermittler werden wahrscheinlich im Namen ihrer eigenen Personalagentur anrufen und nicht im Namen von Arenella-ICT.",
 	"arenella-listing-name": "Name",
-	"arenella-listing-publicity": "Aktie",
+	"arenella-listing-publicity": "Aktion",
 	"arenella-listing-publicity-location": "Standort",
 	"arenella-listing-publicity-open-position": "Offene Stelle",
 	"arenella-listing-recruiter-details": "Angaben zum Personalvermittler",
@@ -290,7 +290,7 @@
 	"arenella-login-user-subscription-login-to-continue": "Bitte melden Sie sich erneut an, um fortzufahren",
 	"arenella-login-user-subscription-thankyour": "Danke fürs Abonnieren.",
 	"arenella-login-user-username": "Nutzername",
-	"arenella-mp-publicity": "Aktie",
+	"arenella-mp-publicity": "Aktion",
 	"arenella-new-candidate-1": "1",
 	"arenella-new-candidate-2": "2",
 	"arenella-new-candidate-3": "3",
@@ -429,7 +429,7 @@
 	"arenella-recruiter-listing-btn-create-from-spec": "Spezifikation ",
 	"arenella-recruiter-listing-btn-delete": "Löschen",
 	"arenella-recruiter-listing-btn-edit": "Bearbeiten",
-	"arenella-recruiter-listing-btn-publicity": "Aktie",
+	"arenella-recruiter-listing-btn-publicity": "Aktion",
 	"arenella-recruiter-listing-btn-publish": "Veröffentlichen",
 	"arenella-recruiter-listing-city": "Stadt",
 	"arenella-recruiter-listing-company": "Unternehmen",
@@ -639,6 +639,7 @@
 	"arenella-stats-candidate-views": "Angeforderte Kandidatenansichten",
 	"arenella-stats-candidate-views-btn-today": "Heute",
 	"arenella-stats-candidate-views-btn-week": "Diese Woche",
+	"arenella-stats-current-week": "Aktuelle Woche",
 	"arenella-stats-daily-downloads": "Tägliche Downloads",
 	"arenella-stats-downloads": "Downloads",
 	"arenella-stats-listings": "Inserate",
@@ -678,7 +679,7 @@
 	"arenella-suggestions-box-alert-success-2": "Sie können Benachrichtigungen im Bildschirm „Suchbenachrichtigungen verwalten“ verwalten.",
 	"arenella-suggestions-box-alert-text": "Bitte fügen Sie die erforderlichen Filter hinzu, bevor Sie Ihren Alarm erstellen",
 	"arenella-suggestions-box-publicity-exp": "EXP",
-	"arenella-suggestions-box-publicity-hdr": "Aktie",
+	"arenella-suggestions-box-publicity-hdr": "Aktion",
 	"arenella-suggestions-box-publicity-years": "Jahre",
 	"arenella-suggestions-box-spec-extraction": "Extraktion durchführen",
 	"arenella-suggestions-box-spec-file": "Datei hochladen",
