--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -639,6 +639,7 @@
 	"arenella-stats-candidate-views": "Requested Candidate Views",
 	"arenella-stats-candidate-views-btn-today": "Today",
 	"arenella-stats-candidate-views-btn-week": "This week",
+	"arenella-stats-current-week": "Current Week",
 	"arenella-stats-daily-downloads": "Daily downloads",
 	"arenella-stats-downloads": "Downloads",
 	"arenella-stats-listings": "Listings",
