--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -639,6 +639,7 @@
 	"arenella-stats-candidate-views": "Opiniones de candidatos solicitadas",
 	"arenella-stats-candidate-views-btn-today": "Hoy",
 	"arenella-stats-candidate-views-btn-week": "ESTA SEMANA",
+	"arenella-stats-current-week": "Semana actual",
 	"arenella-stats-daily-downloads": "Descargas diarias",
 	"arenella-stats-downloads": "Descargas",
 	"arenella-stats-listings": "Listados",
