--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -639,6 +639,7 @@
 	"arenella-stats-candidate-views": "Opinions des candidats demandées",
 	"arenella-stats-candidate-views-btn-today": "Aujourd'hui",
 	"arenella-stats-candidate-views-btn-week": "Cette semaine",
+	"arenella-stats-current-week": "Semaine en cours",
 	"arenella-stats-daily-downloads": "Téléchargements quotidiens",
 	"arenella-stats-downloads": "Téléchargements",
 	"arenella-stats-listings": "Annonces",
