--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -639,6 +639,7 @@
 	"arenella-stats-candidate-views": "Gevraagde kandidaatweergaven",
 	"arenella-stats-candidate-views-btn-today": "Vandaag",
 	"arenella-stats-candidate-views-btn-week": "Deze week",
+	"arenella-stats-current-week": "Huidige week",
 	"arenella-stats-daily-downloads": "Dagelijkse downloads",
 	"arenella-stats-downloads": "Downloads",
 	"arenella-stats-listings": "Advertenties",
