--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -639,6 +639,7 @@
 	"arenella-stats-candidate-views": "Visualizzazioni richieste ai candidati",
 	"arenella-stats-candidate-views-btn-today": "Oggi",
 	"arenella-stats-candidate-views-btn-week": "Questa settimana",
+	"arenella-stats-current-week": "Settimana corrente",
 	"arenella-stats-daily-downloads": "Download giornalieri",
 	"arenella-stats-downloads": "Scaricare",
 	"arenella-stats-listings": "Lavoro",
