new subscription paths

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -367,7 +367,7 @@
 	"arenella-recruiter-account-detail-subs-status": "Status",
 	"arenella-recruiter-account-detail-subs-title": "Ihre Abonnements",
 	"arenella-recruiter-account-detail-subs-type": "Typ",
-	"arenella-recruiter-account-detail-trial-ended": "Testversion beendet",
+	"arenella-recruiter-account-detail-trial-ended": "Abonnement beendet",
 	"arenella-recruiter-account-detail-trial-ended-btn-select": "Wählen",
 	"arenella-recruiter-account-detail-trial-ended-credit": "Kostenlos – Kreditbasiert",
 	"arenella-recruiter-account-detail-trial-ended-credit-cv": "8 Credits für Curricula",
