--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -367,7 +367,7 @@
 	"arenella-recruiter-account-detail-subs-status": "Status",
 	"arenella-recruiter-account-detail-subs-title": "Your subscriptions",
 	"arenella-recruiter-account-detail-subs-type": "Type",
-	"arenella-recruiter-account-detail-trial-ended": "Trial Ended",
+	"arenella-recruiter-account-detail-trial-ended": "Subscription Ended",
 	"arenella-recruiter-account-detail-trial-ended-btn-select": "Select",
 	"arenella-recruiter-account-detail-trial-ended-credit": "Free - Credit Based",
 	"arenella-recruiter-account-detail-trial-ended-credit-cv": "8 Credits for Curriculums",
@@ -376,7 +376,7 @@
 	"arenella-recruiter-account-detail-trial-ended-credit-lost": "Unused credits will be lost.",
 	"arenella-recruiter-account-detail-trial-ended-credit-mp": "2 Credits for the Marketplace",
 	"arenella-recruiter-account-detail-trial-ended-credit-period": "New credits added every Monday",
-	"arenella-recruiter-account-detail-trial-ended-desc": "Your trial subscription has ended. We hope that you have found the site useful. To continue to use the site please select \n\t\t\tone of the following options",
+	"arenella-recruiter-account-detail-trial-ended-desc": "Your subscription has ended. We hope that you have found the site useful. To continue to use the site please select \n\t\t\tone of the following options",
 	"arenella-recruiter-account-detail-trial-ended-paid": "Paid Subscription",
 	"arenella-recruiter-account-detail-trial-ended-paid-desc": "This option provides unlimited access to the site for the duration of the Subscription. Once the subscription has \n\t\t\t\t\texpired you can opt to take out a further subscription. Select this option to see available subscription options.",
 	"arenella-recruiter-account-detail-trial-ended-paid-dowloads": "Unlimited Curriculums downloads",
