--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -367,7 +367,7 @@
 	"arenella-recruiter-account-detail-subs-status": "Estado",
 	"arenella-recruiter-account-detail-subs-title": "Tus suscripciones",
 	"arenella-recruiter-account-detail-subs-type": "Tipo",
-	"arenella-recruiter-account-detail-trial-ended": "El juicio ha terminado",
+	"arenella-recruiter-account-detail-trial-ended": "El suscripcion ha terminado",
 	"arenella-recruiter-account-detail-trial-ended-btn-select": "Seleccionar",
 	"arenella-recruiter-account-detail-trial-ended-credit": "Gratis - Basado en créditos",
 	"arenella-recruiter-account-detail-trial-ended-credit-cv": "8 créditos para currículos",
