--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -367,7 +367,7 @@
 	"arenella-recruiter-account-detail-subs-status": "Statut",
 	"arenella-recruiter-account-detail-subs-title": "Vos abonnements",
 	"arenella-recruiter-account-detail-subs-type": "Type",
-	"arenella-recruiter-account-detail-trial-ended": "Essai terminé",
+	"arenella-recruiter-account-detail-trial-ended": "Abonnement terminé",
 	"arenella-recruiter-account-detail-trial-ended-btn-select": "Sélectionner",
 	"arenella-recruiter-account-detail-trial-ended-credit": "Gratuit - Basé sur le crédit",
 	"arenella-recruiter-account-detail-trial-ended-credit-cv": "8 crédits pour CV",
