--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -367,7 +367,7 @@
 	"arenella-recruiter-account-detail-subs-status": "Stato",
 	"arenella-recruiter-account-detail-subs-title": "I tuoi abbonamenti",
 	"arenella-recruiter-account-detail-subs-type": "Tipo",
-	"arenella-recruiter-account-detail-trial-ended": "Processo terminato",
+	"arenella-recruiter-account-detail-trial-ended": "Abbonamento terminato",
 	"arenella-recruiter-account-detail-trial-ended-btn-select": "Selezionare",
 	"arenella-recruiter-account-detail-trial-ended-credit": "Gratuito - Basato sul credito",
 	"arenella-recruiter-account-detail-trial-ended-credit-cv": "8 Crediti per Curriculum",
