--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -367,7 +367,7 @@
 	"arenella-recruiter-account-detail-subs-status": "Toestand",
 	"arenella-recruiter-account-detail-subs-title": "Uw abonnementen",
 	"arenella-recruiter-account-detail-subs-type": "Type",
-	"arenella-recruiter-account-detail-trial-ended": "Proef beëindigd",
+	"arenella-recruiter-account-detail-trial-ended": "Abonnement beëindigd",
 	"arenella-recruiter-account-detail-trial-ended-btn-select": "Selecteer",
 	"arenella-recruiter-account-detail-trial-ended-credit": "Gratis - op krediet gebaseerd",
 	"arenella-recruiter-account-detail-trial-ended-credit-cv": "8 Credits voor CV's",
