Added manufacturing and transportation as industry

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -902,6 +902,7 @@
 	"LUXEMBOURG": "Luxemburg",
 	"MALTA": "Malta",
 	"MALTESE": "Maltesisch",
+	"MANUFACTURING": "Herstellung",
 	"MEDIA": "Media",
 	"MILITARY": "Militär",
 	"mp-failure-failed-to-update-open-position": "Offene Position konnte nicht aktualisiert werden",
@@ -1092,6 +1093,7 @@
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "",
 	"TOURISM": "Tourismus",
+	"TRANSPORTATION": "Transport",
 	"TURKEY": "Truthahn",
 	"TURKISH": "Türkisch",
 	"UI_UX": "UI/UX",
