--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -902,6 +902,7 @@
 	"LUXEMBOURG": "Luxembourg",
 	"MALTA": "Malta",
 	"MALTESE": "Maltese",
+	"MANUFACTURING": "Manufacturing",
 	"MEDIA": "Media",
 	"MILITARY": "Military",
 	"mp-failure-failed-to-update-open-position": "Failed to update Open Position",
@@ -1092,6 +1093,7 @@
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 Months",
 	"TOURISM": "Tourism",
+	"TRANSPORTATION": "Transportation",
 	"TURKEY": "Turkey",
 	"TURKISH": "Turkish",
 	"UI_UX": "UI/UX",
