--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -902,6 +902,7 @@
 	"LUXEMBOURG": "Luxemburgo",
 	"MALTA": "Malta",
 	"MALTESE": "Maltés",
+	"MANUFACTURING": "Fabricación",
 	"MEDIA": "Media",
 	"MILITARY": "Militar",
 	"mp-failure-failed-to-update-open-position": "No se pudo actualizar la posición abierta",
@@ -1092,6 +1093,7 @@
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "",
 	"TOURISM": "Turismo",
+	"TRANSPORTATION": "Transport",
 	"TURKEY": "Pavo",
 	"TURKISH": "Turco",
 	"UI_UX": "UI/UX",
