--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -902,6 +902,7 @@
 	"LUXEMBOURG": "Luxembourg",
 	"MALTA": "Malte",
 	"MALTESE": "Maltais",
+	"MANUFACTURING": "Fabrication",
 	"MEDIA": "Media",
 	"MILITARY": "Militaire",
 	"mp-failure-failed-to-update-open-position": "Échec de la mise à jour de la position ouverte",
@@ -1092,6 +1093,7 @@
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 mois",
 	"TOURISM": "Tourisme",
+	"TRANSPORTATION": "Transport",
 	"TURKEY": "Dinde",
 	"TURKISH": "Turc",
 	"UI_UX": "UI/UX",
