--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -902,6 +902,7 @@
 	"LUXEMBOURG": "Lussemburgo",
 	"MALTA": "Malta",
 	"MALTESE": "Maltese",
+	"MANUFACTURING": "Produzione",
 	"MEDIA": "Media",
 	"MILITARY": "Militare",
 	"mp-failure-failed-to-update-open-position": "Impossibile aggiornare la posizione aperta",
@@ -1092,6 +1093,7 @@
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 mesi",
 	"TOURISM": "Turismo",
+	"TRANSPORTATION": "Trasporti",
 	"TURKEY": "Tacchino",
 	"TURKISH": "Turco",
 	"UI_UX": "UI/UX",
