--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -902,6 +902,7 @@
 	"LUXEMBOURG": "Luxemburg",
 	"MALTA": "Malta",
 	"MALTESE": "Maltees",
+	"MANUFACTURING": "Productie",
 	"MEDIA": "Media",
 	"MILITARY": "Militair",
 	"mp-failure-failed-to-update-open-position": "Kan de open positie niet bijwerken",
@@ -1092,6 +1093,7 @@
 	"TESTER": "Tester",
 	"THREE_MONTHS_SUBSCRIPTION": "3 maanden",
 	"TOURISM": "Toerisme",
+	"TRANSPORTATION": "Vervoer",
 	"TURKEY": "Kalkoen",
 	"TURKISH": "Turks",
 	"UI_UX": "UI/UX",
