--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -226,6 +226,7 @@
 	"arenella-listing-btn-your-posts": "Deine Beiträge",
 	"arenella-listing-city": "Stadt",
 	"arenella-listing-company": "Unternehmen",
+	"arenella-listing-contact-recruiter": "Kontakt zum Personalvermittler",
 	"arenella-listing-contract-age": "Alter des Posts",
 	"arenella-listing-contract-all": "Alle",
 	"arenella-listing-contract-information": "Vertragsinformation",
