--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -226,6 +226,7 @@
 	"arenella-listing-btn-your-posts": "Your Posts",
 	"arenella-listing-city": "City",
 	"arenella-listing-company": "Company",
+	"arenella-listing-contact-recruiter": "Contact Recruiter",
 	"arenella-listing-contract-age": "Age of Post",
 	"arenella-listing-contract-all": "All",
 	"arenella-listing-contract-information": "Contract Information",
