--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -226,6 +226,7 @@
 	"arenella-listing-btn-your-posts": "Tus publicaciones",
 	"arenella-listing-city": "Ciudad",
 	"arenella-listing-company": "Compañía",
+	"arenella-listing-contact-recruiter": "Contactar al reclutador",
 	"arenella-listing-contract-age": "Edad del correo",
 	"arenella-listing-contract-all": "Todo",
 	"arenella-listing-contract-information": "Información del contrato",
