--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -226,6 +226,7 @@
 	"arenella-listing-btn-your-posts": "Vos publications",
 	"arenella-listing-city": "Ville",
 	"arenella-listing-company": "Entreprise",
+	"arenella-listing-contact-recruiter": "Contacter le recruteur",
 	"arenella-listing-contract-age": "Âge du poste",
 	"arenella-listing-contract-all": "Tout",
 	"arenella-listing-contract-information": "Informations contractuelles",
