--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -226,6 +226,7 @@
 	"arenella-listing-btn-your-posts": "I tuoi post",
 	"arenella-listing-city": "Città",
 	"arenella-listing-company": "Azienda",
+	"arenella-listing-contact-recruiter": "Contatta il reclutatore",
 	"arenella-listing-contract-age": "Età della Posta",
 	"arenella-listing-contract-all": "Tutto",
 	"arenella-listing-contract-information": "Informazioni sul contratto",
