--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -226,6 +226,7 @@
 	"arenella-listing-btn-your-posts": "Jouw Posts",
 	"arenella-listing-city": "Stad",
 	"arenella-listing-company": "Bedrijf",
+	"arenella-listing-contact-recruiter": "Neem contact op met Recruiter",
 	"arenella-listing-contract-age": "Beschikbaar sinds",
 	"arenella-listing-contract-all": "Alles",
 	"arenella-listing-contract-information": "Contractinformatie",
