candidate screen ui

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -850,6 +850,7 @@
 	"HEALTHCARE": "Gesundheitspflege",
 	"Hide": "Verstecken",
 	"hide-filters": "Filter ausblenden",
+	"hide-options": "Optionen ausblenden",
 	"HINDI": "Hindi",
 	"HOSPITALITY": "Gastfreundschaft",
 	"HUNGARIAN": "Ungarisch",
@@ -1035,6 +1036,7 @@
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Anzeigen",
 	"show-filters": "Filter anzeigen",
+	"show-options": "Optionen anzeigen",
 	"SIX_MONTHS_SUBSCRIPTION": "",
 	"SLOVAKIA": "Slowakei",
 	"SLOVAKIAN": "Slowakisch",
