--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -850,6 +850,7 @@
 	"HEALTHCARE": "Healthcare",
 	"Hide": "Hide",
 	"hide-filters": "Hide filters",
+	"hide-options": "Hide Options",
 	"HINDI": "Hindi",
 	"HOSPITALITY": "Hospitality",
 	"HUNGARIAN": "Hungarian",
@@ -1035,6 +1036,7 @@
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Show",
 	"show-filters": "Show Filters",
+	"show-options": "Show Options",
 	"SIX_MONTHS_SUBSCRIPTION": "6 Months",
 	"SLOVAKIA": "Slovakia",
 	"SLOVAKIAN": "Slovakian",
