--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -850,6 +850,7 @@
 	"HEALTHCARE": "Salud",
 	"Hide": "Esconder",
 	"hide-filters": "Ocultar filtros",
+	"hide-options": "Ocultar opciones",
 	"HINDI": "Hindi",
 	"HOSPITALITY": "Hospitalidad",
 	"HUNGARIAN": "Húngaro",
@@ -1035,6 +1036,7 @@
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Mostrar",
 	"show-filters": "Mostrar filtros",
+	"show-options": "Mostrar opciones",
 	"SIX_MONTHS_SUBSCRIPTION": "",
 	"SLOVAKIA": "Eslovaquia",
 	"SLOVAKIAN": "Eslovaco",
