--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -850,6 +850,7 @@
 	"HEALTHCARE": "Santé",
 	"Hide": "Cacher",
 	"hide-filters": "Masquer les filtres",
+	"hide-options": "Masquer les options",
 	"HINDI": "Hindi",
 	"HOSPITALITY": "Hospitalité",
 	"HUNGARIAN": "Hongrois",
@@ -1035,6 +1036,7 @@
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Montre",
 	"show-filters": "Afficher les filtres",
+	"show-options": "Afficher les options",
 	"SIX_MONTHS_SUBSCRIPTION": "6 mois",
 	"SLOVAKIA": "Slovaquie",
 	"SLOVAKIAN": "Slovaque",
