--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -850,6 +850,7 @@
 	"HEALTHCARE": "Sanitaria",
 	"Hide": "Nascondere",
 	"hide-filters": "Nascondi filtri",
+	"hide-options": "Nascondi opzioni",
 	"HINDI": "Hindi",
 	"HOSPITALITY": "Ospitalità",
 	"HUNGARIAN": "Ungherese",
@@ -1035,6 +1036,7 @@
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Mostrare",
 	"show-filters": "Mostra filtri",
+	"show-options": "Mostra opzioni",
 	"SIX_MONTHS_SUBSCRIPTION": "6 mesi",
 	"SLOVAKIA": "Slovacchia",
 	"SLOVAKIAN": "Slovacco",
