--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -850,6 +850,7 @@
 	"HEALTHCARE": "Zorg",
 	"Hide": "Verbergen",
 	"hide-filters": "Verberg filters",
+	"hide-options": "Opties verbergen",
 	"HINDI": "Hindi",
 	"HOSPITALITY": "Horeca",
 	"HUNGARIAN": "Hongaars",
@@ -1035,6 +1036,7 @@
 	"SCRUM_MASTER_SHORT": "Scrum Master",
 	"Show": "Laten zien",
 	"show-filters": "Filters weergeven",
+	"show-options": "Opties weergeven",
 	"SIX_MONTHS_SUBSCRIPTION": "6 maanden",
 	"SLOVAKIA": "Slowakije",
 	"SLOVAKIAN": "Slowaaks",
